[package]
name = "cagario"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy-inspector-egui = "0.14.0"
simula_camera = { git = "https://github.com/Simbotic/simula.git", branch = "bevy-v0.9.0" }
simula_video = { git = "https://github.com/Simbotic/simula.git", branch = "bevy-v0.9.0" }
simula_action = { git = "https://github.com/Simbotic/simula.git", branch = "bevy-v0.9.0" }
simula_core = { git = "https://github.com/Simbotic/simula.git", branch = "bevy-v0.9.0" }
simula_viz = { git = "https://github.com/Simbotic/simula.git", branch = "bevy-v0.9.0" }
bevy_egui = "0.17"
rand = "0.8.5"
bevy_rapier3d = "0.19.0"




[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
